Added inputs and blocks for fetching Person info

--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,20 @@
     <title>Person manager</title>
   </head>
   <body>
-    Hi
+    <script language="javascript" src="PersonManager.js"></script>
+    <script language="javascript" src="index.js"></script>
+    <dev>
+      <input id='name' type="text" value="Anonymous"></input>
+      <input id='age' type="number" value=22></input>
+    </dev>
+    <br/>
+
+    <dev>
+      <button id="loader">Load</button>
+      <button id="saver">Save</button>
+    </dev>
+
+    <div id="status">Pending actions...</div>
   </body>
 </html>
 
