--- a/html/index.html
+++ b/html/index.html
@@ -34,11 +34,29 @@
         <div class="panel-heading">
           <h3 class="panel-title">Services information</h3>
         </div>
-        <div class="panel-body">
-          REST: <mark id="rest-service"></mark><br/>
-          LOGIC: <mark id="logic-service"></mark><br/>
-          REPOSITORY: <mark id="repository-service"></mark>
-        </div>
+          <div class="panel-body">
+            <div class="form-group">
+            <label for="rest-service">REST</label>
+            <mark id="rest-service"></mark>
+            </div>
+
+            <div class="form-group">
+            <label for="logic-service">LOGIC</label>
+            <mark id="logic-service"></mark>
+            </div>
+
+            <div class="form-group">
+            <label for="repository-service">REPOSITORY</label>
+            <mark id="repository-service"></mark>
+            </div>
+
+            <div class="form-group">
+            <label for="port">PORT</label>
+            <select class="form-control" name="port" id="port"></select>
+            </select>
+            </div>
+
+          </div>
       </div>
     </div>
     <div class="col-sm-4">
@@ -62,6 +80,7 @@
       </div>
     </div>
     <div class="col-sm-4">
+    </div>
     </div>
 
   </body>
