--- a/html/index.html
+++ b/html/index.html
@@ -80,6 +80,8 @@
       </div>
     </div>
     <div class="col-sm-4">
+      <ul id="history" class="list-group">
+      </ul>
     </div>
     </div>
 
